--- a/src/components/checkbox-buttons/checkbox-buttons.pug
+++ b/src/components/checkbox-buttons/checkbox-buttons.pug
@@ -4,6 +4,6 @@ mixin checkbox-buttons({title, items})
     each val in items
       label.checkbox-buttons__item
         input(type="checkbox").checkbox-buttons__checkbox
-        span.checkbox-buttons__custom-checkbox(tabindex='0')
+        span.checkbox-buttons__custom-checkbox(tabindex="0")
         span.checkbox-buttons__text
           | #{val}
