--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -59,7 +59,7 @@ mixin footer()
           p.footer__subscribe-text
             | Получайте специальные 
             | предложения и новости сервиса
-          +subscription({title: '', placeholder: 'Email', required: true})
+          +subscription({title: "", placeholder: "Email", required: true})
     .footer__basement
       .container
         .footer__basement-content
