--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -1,28 +1,28 @@
 extends ../main
 
 block head
-  link(rel='apple-touch-icon' sizes='180x180' href='assets/favicons/apple-touch-icon.png')
-  link(rel='icon' type='image/png' sizes='32x32' href='assets/favicons/favicon-32x32.png')
-  link(rel='icon' type='image/png' sizes='16x16' href='assets/favicons/favicon-16x16.png')
-  link(rel='manifest' href='assets/favicons/site.webmanifest')
+  link(rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png")
+  link(rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png")
+  link(rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png")
+  link(rel="manifest" href="assets/favicons/site.webmanifest")
 block content
-  svg.logo.logo_gray(role='image' aria-label='toxin-logo')
+  svg.logo.logo_gray(role="image" aria-label="toxin-logo")
     use(xlink:href="#logo-gray")
   .container
-    ul(class='index__list')
-      li(class='index__list-item')
-        a(href='/form-elements.html' class='index__link') form-elements
-      li(class='index__list-item')
-        a(href='/landing-page.html' class='index__link') landing page
-      li(class='index__list-item')
-        a(href='/headers-&-footers.html' class='index__link') headers and footers
-      li(class='index__list-item')
-        a(href='/registration-page.html' class='index__link') reginstration page
-      li(class='index__list-item')
-        a(href='/room-details.html' class='index__link') room-details page
-      li(class='index__list-item')
-        a(href='/sign-in-page.html' class='index__link') sign in page
-      li(class='index__list-item')
-        a(href='/filter-page.html' class='index__link') filter page
-      li(class='index__list-item')
-        a(href='/cards-page.html' class='index__link') cards page
+    ul(class="index__list")
+      li(class="index__list-item")
+        a(href="/form-elements.html" class="index__link") form-elements
+      li(class="index__list-item")
+        a(href="/landing-page.html" class="index__link") landing page
+      li(class="index__list-item")
+        a(href="/headers-&-footers.html" class="index__link") headers and footers
+      li(class="index__list-item")
+        a(href="/registration-page.html" class="index__link") reginstration page
+      li(class="index__list-item")
+        a(href="/room-details.html" class="index__link") room-details page
+      li(class="index__list-item")
+        a(href="/sign-in-page.html" class="index__link") sign in page
+      li(class="index__list-item")
+        a(href="/filter-page.html" class="index__link") filter page
+      li(class="index__list-item")
+        a(href="/cards-page.html" class="index__link") cards page
