--- a/src/components/card-selection/card-selection.pug
+++ b/src/components/card-selection/card-selection.pug
@@ -8,13 +8,13 @@ mixin card-selection()
               | Найдем номера под ваши пожелания
           .card-selection__block.card-selection__block_margin-b-15
             +date-dropdown({
-              classNameFirstInput: 'js-date-masked js-date-dropdown__input', 
-              classNameSecondInput: 'js-date-masked',
-              title: 'прибытие', 
-              titleSecond: 'выезд'
+              classNameFirstInput: "js-date-masked js-date-dropdown__input", 
+              classNameSecondInput: "js-date-masked",
+              title: "прибытие", 
+              titleSecond: "выезд"
               })
           .card-selection__block.card-selection__block_margin-b-30
             h4.block-title
               | Гости
-            +dropdown-choose({className: 'js-dropdown-guests', title:'Гости'})
-          button(type="submit").button.button_big подобрать номер
+            +dropdown-choose({className: "js-dropdown-guests", title:"Гости"})
+          input.button.button_big(type="submit" value="подобрать номер") 
