--- a/src/components/rich-list/rich-list.pug
+++ b/src/components/rich-list/rich-list.pug
@@ -6,7 +6,7 @@ mixin rich-list({title, items})
         li.rich-list__li
           label.rich-list__item
             input(type="checkbox").rich-list__checkbox
-            span.rich-list__custom-checkbox(tabindex='0') 
+            span.rich-list__custom-checkbox(tabindex="0") 
             span.rich-list__text 
               span.rich-list__head #{val.title}
               br
