--- a/src/components/subscription/subscription.pug
+++ b/src/components/subscription/subscription.pug
@@ -1,12 +1,14 @@
 mixin subscription({title,placeholder, required})
-	label.subscription__title
-		span.block-title #{title}
-		input.subscription__input(
-			type='email' 
-			name='email'
-			placeholder=placeholder
-			pattern='[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$' 
-			required=required
-		)
+		label.subscription__title
+			span.block-title #{title}
+			form.subscription__form
+				input.subscription__input(
+					type="email" 
+					name="email"
+					placeholder=placeholder
+					pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
+					required=required
+				)
+				button.subscription__button
 
 
