--- a/src/main.scss
+++ b/src/main.scss
@@ -7,7 +7,13 @@
 html {
   line-height: $line-height-primary;
   font-size: $main-font-size;
+  font-family: $font-family-primary;
+  font-weight: $normal;
+  color: $text-color;
+  background-color: #ffffff;
   height: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   @media screen and (max-width: $table-width) {
     font-size: 16px;
   }
@@ -22,11 +28,6 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: $font-family-primary;
-  font-size: $main-font-size;
-  font-weight: $normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 *,
