--- a/src/pages/headers-&-footers/headers-&-footers.pug
+++ b/src/pages/headers-&-footers/headers-&-footers.pug
@@ -6,13 +6,13 @@ include ../../components/header/header
 include ../../components/footer/footer
 
 block head
-  link(rel='apple-touch-icon' sizes='180x180' href='assets/favicons/apple-touch-icon.png')
-  link(rel='icon' type='image/png' sizes='32x32' href='assets/favicons/favicon-32x32.png')
-  link(rel='icon' type='image/png' sizes='16x16' href='assets/favicons/favicon-16x16.png')
-  link(rel='manifest' href='assets/favicons/site.webmanifest')
+  link(rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png")
+  link(rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png")
+  link(rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png")
+  link(rel="manifest" href="assets/favicons/site.webmanifest")
 
 block content
-  svg.logo.logo_grey(role='image' aria-label='toxin logo')
+  svg.logo.logo_grey(role="image" aria-label="toxin logo")
     use(xlink:href="#logo-gray")
   main.headers-footers
     .wrapper
