--- a/src/pages/main.pug
+++ b/src/pages/main.pug
@@ -7,9 +7,8 @@ html(lang="en")
     title toxin
     meta(name="keywords" content="Отель, забронировать комнату")
     meta(name="description", content="frontend lessons")
+    meta(name="keywords" content="отель, бронирование, комнаты, отдых")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(name='msapplication-TileColor' content='#da532c')
-    meta(name='theme-color' content='#ffffff')
     block head
   body(class=pageClass)
     div.wrapper
