--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -13,20 +13,20 @@ include ../../components/like-button/like-button
 include ../../components/bullet-list/bullet-list
 
 block head
-  link(rel='apple-touch-icon' sizes='180x180' href='assets/favicons/apple-touch-icon.png')
-  link(rel='icon' type='image/png' sizes='32x32' href='assets/favicons/favicon-32x32.png')
-  link(rel='icon' type='image/png' sizes='16x16' href='assets/favicons/favicon-16x16.png')
-  link(rel='manifest' href='assets/favicons/site.webmanifest')
+  link(rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png")
+  link(rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png")
+  link(rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png")
+  link(rel="manifest" href="assets/favicons/site.webmanifest")
 
 block content
   +header({isEntered: false})
   .content
     .room-details
       .room-details__room-photos
-        img(src=require('./images/room-d-1.jpg').default alt='Комната в отеле' class='room-details__main-photo room-details__photo')
+        img(src=require("./images/room-d-1.jpg").default alt="Комната в отеле" class="room-details__main-photo room-details__photo")
         .room-details__another-photos
-          img(src=require('./images/room-d-2.jpg').default alt='Комната в отеле' class='room-details__another-photo room-details__photo')
-          img(src=require('./images/room-d-3.jpg').default alt='Комната в отеле' class='room-details__another-photo room-details__photo')
+          img(src=require("./images/room-d-2.jpg").default alt="Комната в отеле" class="room-details__another-photo room-details__photo")
+          img(src=require("./images/room-d-3.jpg").default alt="Комната в отеле" class="room-details__another-photo room-details__photo")
       .room-details__text-content
         .container
           main.room-details__main 
@@ -37,19 +37,19 @@ block content
                     | Сведения о номере
                   +advantages({items: [
                           {
-                            title: 'Комфорт',
-                            description: 'Шумопоглащиющие стены',
-                            href: '#insert-emoticon'
+                            title: "Комфорт",
+                            description: "Шумопоглащиющие стены",
+                            href: "#insert-emoticon"
                           },
                           {
-                            title: 'Удобство',
-                            description: 'Окно в каждой из спален',
-                            href: '#location-city'
+                            title: "Удобство",
+                            description: "Окно в каждой из спален",
+                            href: "#location-city"
                           },
                           {
-                            title: 'Уют',
-                            description: 'Номер оснащен камином',
-                            href: '#whatshot'
+                            title: "Уют",
+                            description: "Номер оснащен камином",
+                            href: "#whatshot"
                           },
 
                         ]})
@@ -59,19 +59,19 @@ block content
                   +circle-diagram({
                     voices: [
                        {
-                        grade: 'Великолепно',
+                        grade: "Великолепно",
                         num: 130
                       },
                       {
-                        grade: 'Хорошо',
+                        grade: "Хорошо",
                         num: 65
                       },
                        {
-                        grade: 'Удовлетворительно',
+                        grade: "Удовлетворительно",
                         num: 65
                       },
                        {
-                        grade: 'Разочарован',
+                        grade: "Разочарован",
                         num: 0
                       },
                     ]
@@ -83,28 +83,28 @@ block content
                   span.room-details__reviews-count
                     | 2 отзыва
                 +review({
-                  src: 'images/maga.png',
-                  name: 'Мурад Сарафанов',
-                  date: '5 дней назад',
-                  text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий.\nИ стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто\nне жаловался из соседей.',
+                  src: "images/maga.png",
+                  name: "Мурад Сарафанов",
+                  date: "5 дней назад",
+                  text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий.\nИ стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто\nне жаловался из соседей.",
                   like: 11
                 })
                 +review({
-                  src: 'images/patric.png',
-                  name: 'Патрисия Стёклышкина',
-                  date: 'Неделю назад',
-                  text: 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать,\nкаждый день новое блюдо и десерт как комплимент',
+                  src: "images/patric.png",
+                  name: "Патрисия Стёклышкина",
+                  date: "Неделю назад",
+                  text: "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать,\nкаждый день новое блюдо и десерт как комплимент",
                   like: 2
                   }
                   )
               .room-details__rules-block
                 +bullet-list({
-                  title: 'Правила', 
-                  className: 'room-details__title room-details__title_margin-l-20',
+                  title: "Правила", 
+                  className: "room-details__title room-details__title_margin-l-20",
                   items: [
-                    'Нельзя с питомцами',
-                    'Без вечеринок и мероприятий',
-                    'Время прибытия — после 13:00, а выезд до 12:00',
+                    "Нельзя с питомцами",
+                    "Без вечеринок и мероприятий",
+                    "Время прибытия — после 13:00, а выезд до 12:00",
                   ]
               })
                 .room-details__cancel-rule
@@ -118,10 +118,10 @@ block content
             aside.room-details__aside
               +card-book({
                 number: 888,
-                type: 'люкс',
-                priceForOneDay: '9 990',
-                discount: '2 179',
-                taxes: ['1 000', '300']
+                type: "люкс",
+                priceForOneDay: "9 990",
+                discount: "2 179",
+                taxes: ["1 000", "300"]
               })
 
 
